k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-jenkins
spec:
  replicas: 3
  selector:
    matchLabels:
      app: k8s-jenkins
  template:
    metadata:
      labels:
        app: k8s-jenkins
    spec:
      volumes:
      - name: k8s-jenkins-volume
        emptyDir: {}
      containers:
      - name: k8s-jenkins
        image: ohya/swagger2-deploy
#        resources:
#          limits:
#            memory: 0
#            cpu: 0
#        imagePullPolicy: Always
        ports:
        - containerPort: 80
#      restartPolicy: Always
        volumeMounts:
          - name: k8s-jenkins-volume
            mountPath: /tmp/volume
