k8s-ingress.yaml
# ingress.yaml

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web
spec:
  rules:
  - host: ohya.swagger2.ya
    http:
      paths:
      - backend:
          serviceName: k8s-swagger-service
          servicePort: 80
